@@ -44,7 +44,6 @@
         <!-- JARs -->
         <module>tech1-framework-foundation</module>
         <module>tech1-framework-iam</module>
-        <module>tech1-framework-b2b-mongodb-security-jwt</module>
         <!-- Servers -->
         <module>tech1-framework-b2b-mongodb-server</module>
         <module>tech1-framework-b2b-postgres-server</module>
@@ -56,6 +55,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <project.delombok.output>${project.build.directory}/delombok</project.delombok.output>
+        <!-- iam module, mongo integration tests -->
+        <argLine>--add-opens java.base/java.time=ALL-UNNAMED</argLine>
         <!-- dependencies, scope == compile -->
         <version.dependency.apache.collections>4.4</version.dependency.apache.collections>
         <version.dependency.browscap>1.4.0</version.dependency.browscap>
